More Minor fixes to assignment 1

--- a/Assignments/Assignment 1 - Pandas/Pandas basics.ipynb
+++ b/Assignments/Assignment 1 - Pandas/Pandas basics.ipynb
@@ -4,8 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Ex2 - Getting and Knowing your Data\n",
-    "\n",
+    "# Pandas assigment"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Check out [Chipotle Exercises Video Tutorial](https://www.youtube.com/watch?v=lpuYZ5EUyS8&list=PLgJhDSE2ZLxaY_DigHeiIDC1cD09rXgJv&index=2) to watch a data scientist go through the exercises"
    ]
   },
@@ -94,11 +99,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Hint: use random"
+    "# Hint: use sample"
    ]
   },
   {
@@ -293,27 +298,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 91,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dtype('float64')"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "chipo.item_price.dtype"
+    "#Hint: chipo.item_price.dtype"
    ]
   },
   {
@@ -436,7 +430,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 5. What is the price of each item? "
+    "### What is the price of each item? "
    ]
   },
   {
@@ -450,7 +444,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 4. How many products cost more than $10.00?"
+    "### How many products cost more than $10.00?"
    ]
   },
   {
@@ -464,7 +458,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 6. Sort by the name of the item"
+    "### Sort by the name of the item"
    ]
   },
   {
@@ -478,7 +472,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 7. What was the quantity of the most expensive item ordered?"
+    "### What was the quantity of the most expensive item ordered?"
    ]
   },
   {
@@ -492,7 +486,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 8. How many times was a Veggie Salad Bowl ordered?"
+    "### How many times was a Veggie Salad Bowl ordered?"
    ]
   },
   {
@@ -506,7 +500,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 9. How many times did someone order more than one Canned Soda?"
+    "### How many times did someone order more than one Canned Soda?"
    ]
   },
   {
